configura a pagina inicial

--- a/app/views/heros/index.html.erb
+++ b/app/views/heros/index.html.erb
@@ -15,7 +15,7 @@
       <tr>
         <td><%= hero.name %></td>
         <td><%= link_to 'Show', hero %></td>
-        <td><%= link_to 'Edit', edit_hero_path(hero) %></td>
+        <td><%= link_to 'Edita', edit_hero_path(hero) %></td>
         <td><%= link_to 'Destroy', hero, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
